# BestCode

./: Cargo.toml  PROTOCOL.md  README.md
src/: lib.rs  main.rs  pipeline.rs
src/agent/: handler.rs  prompts.rs  state.rs  tools.rs  translate.rs
src/buffer/: mod.rs
src/config/: mod.rs
src/kernel/: context_store.rs  error.rs  journal.rs  mod.rs  thread_table.rs  wal.rs
src/librarian/: handler.rs  mod.rs  prompt.rs
src/llm/: client.rs  mod.rs  types.rs
src/lsp/: command_line.rs  mod.rs  organism.rs
src/organism/: mod.rs  parser.rs  profile.rs
src/pipeline/: events.rs  mod.rs
src/ports/: firewall.rs
src/routing/: form_filler.rs
src/security/: mod.rs
src/tools/: command_exec.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  mod.rs
src/treesitter/: handler.rs
src/tui/: app.rs  commands.rs  context_tree.rs  dashboard.rs  event.rs  input.rs  layout.rs  markdown.rs  mod.rs  runner.rs  segment_detail.rs
src/tui/diagram/: layout.rs
src/tui/render/: agent.rs  context.rs  generic.rs  mod.rs  tool.rs
src/wasm/: capabilities.rs  definitions.rs  error.rs  mod.rs  peer.rs  runtime.rs
src/wit/: mod.rs  parser.rs
tests/: agent_live.rs  llm_live.rs
tests/fixtures/: echo.wasm
tools/echo-tool/: Cargo.toml
tools/echo-tool/src/: lib.rs
wit/: tool.wit
