[package]
name = "agentos"
version = "0.1.0"
edition = "2021"
description = "An operating system for AI coding agents. No compaction, ever."
authors = ["Daniel Ullfig <dullfig@github.com>"]

[dependencies]
rust-pipeline = { path = "../rust-pipeline" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

memmap2 = "0.9"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"

# TUI presentation layer
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tui-tree-widget = "0.24"
tui-menu = "0.3"
ratatui-code-editor = { git = "https://github.com/dullfig/ratatui-code-editor", branch = "ratatui-0.30" }
tui-markdown = "0.3"

# WASM component runtime
wasmtime = { version = "41", features = ["component-model"] }
wasmtime-wasi = "41"

# Tree-sitter core + language grammars
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"

# Language intelligence (in-process LSP data types, no transport)
lsp-types = "0.97"

# Core tool dependencies
glob = "0.3"
regex = "1"
similar = "2"

[dev-dependencies]
tempfile = "3"
